--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,72 @@
-COMPANY NAME
-Home
-Product
-Contact
-More information
-<form action="nowhere.php" method="post">
-	<fieldset>
-		<label >Select topic</label>
-		<select>
-			<option value="general">General inquiries</option>
-			<option value="press">Press relations</option>
-			<option value="recruitement">Recruitement</option>
-		</select>
-	</fieldset>
-	<fieldset class="contactFormFieldset">
-		<input
-				type="text"
-				name="contactFormName"
-				placeholder="Your name.."
-		/>
-	</fieldset>
-	<fieldset class="contactFormFieldset">
-		<input
-				type="email"
-				name="email"
-				placeholder="Your email.."
-		/>
-	</fieldset>
-	<fieldset>
-		<textarea
-				rows="7"
-				cols="40"
-				name="message"
-				placeholder="Write something.."
-		></textarea>
-	</fieldset>
-	<input
-			type="submit"
-			value="Submit"
-	/>
-</form>
-2018 - Student name - Inholland 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Contact || Company Name</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+</head>
+<body>
+    <section class='main'>
+
+        <header>
+            <h1>COMPANY NAME</h1>
+		</header>
+		
+        <nav>
+            <ul>
+                <li>Products</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+		</nav>
+		
+        <section class='content'>
+			<h3>Contact</h3>
+			<h4>More information</h4>
+			<form action="nowhere.php" method="post">
+				<fieldset>
+					<label >Select topic</label>
+					<select>
+						<option value="general">General inquiries</option>
+						<option value="press">Press relations</option>
+						<option value="recruitement">Recruitement</option>
+					</select>
+				</fieldset>
+				<fieldset class="contactFormFieldset">
+					<input
+							type="text"
+							name="contactFormName"
+							placeholder="Your name.."
+					/>
+				</fieldset>
+				<fieldset class="contactFormFieldset">
+					<input
+							type="email"
+							name="email"
+							placeholder="Your email.."
+					/>
+				</fieldset>
+				<fieldset>
+					<textarea
+							rows="7"
+							cols="40"
+							name="message"
+							placeholder="Write something.."
+					></textarea>
+				</fieldset>
+				<input
+						type="submit"
+						value="Submit"
+				/>
+			</form>
+		</section>
+		
+        <footer>
+            <p>&copy; 2018 - Japheth Fenton - Inholland</p>
+		</footer>
+		
+    </section>
+</body>
+</html>
