--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Home || Company Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <header>
-        <h1>COMPANY NAME</h1>
-    </header>
-    <nav>
-        <ul>
-            <li>Products</li>
-            <li>Blog</li>
-            <li>Contact</li>
-        </ul>
-    </nav>
+    <section class='main'>
+
+        <header>
+            <h1>COMPANY NAME</h1>
+        </header>
+
+        <nav>
+            <ul>
+                <li>Products</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+
+        <section class='content'>
+            <h3>We Are Entertainment</h3>
+            <img src='img/product3.png' alt='Luigi, Yoshi and Mario figurines'>
+            <h3>Mobile Games</h3>
+            <img src='img/product8.png' alt='Someone playing puzzle game on mobile phone'>
+            <h3>Board Games</h3>
+            <img src='img/product6.png' alt='Boardgame figures'>
+            <h3>Console Games</h3>
+            <img src='img/product9.png' alt='Playstation 4 controller'>
+        </section>
+
+        <footer>
+            <p>&copy; 2018 - Japheth Fenton - Inholland</p>
+        </footer>
+
+    </section>
 </body>
 </html>
-COMPANY NAME
-Products
-Blog
-Contact
-we are 
-entertainment
-mobile games
-board games
-console games
-2018 - Student name - Inholland 
