--- a/product.html
+++ b/product.html
@@ -1,8 +1,50 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Products || Company Name</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+</head>
+<body>
+    <section class='main'>
 
+        <header>
+            <h1>COMPANY NAME</h1>
+        </header>
 
-COMPANY NAME
-Home
-Blog
-Contact
-product catalog
-2018 - Student name - Inholland 
+        <nav>
+            <ul>
+                <li>Products</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+
+        <section class='content'>
+            <h3>Product Catalog</h3>
+            <h3>Products</h3>
+            <figure class='catalog'>
+                <img src='img/product1.png' alt='Rubix Cube'>
+                <img src='img/product2.png' alt='Toy Castle'>
+                <img src='img/product3.png' alt='Luigi, Yoshi and Mario figurines'>
+                <img src='img/product4.png' alt='Poker set'>
+                <img src='img/product5.png' alt='Chess pieces'>
+                <img src='img/product6.png' alt='Boardgame figures'>
+                <img src='img/product7.png' alt='Darts stuck in a board'>
+                <img src='img/product8.png' alt='Someone playing puzzle game on mobile phone'>
+                <img src='img/product9.png' alt='Playstation 4 controller'>
+                <img src='img/product10.png' alt='Snes Controller'>
+                <img src='img/product11.png' alt='Arcade Game'>
+                <img src='img/product12.png' alt='Beerpong set'>
+            </figure>
+        </section>
+
+        <footer>
+            <p>&copy; 2018 - Japheth Fenton - Inholland</p>
+        </footer>
+
+    </section>
+</body>
+</html>
