Start with the CSS

--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home || Company Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 <body>
     <section class='main'>
 
         <header>
-            <h1>COMPANY NAME</h1>
+            <h1><a href="index.html">COMPANY NAME</a></h1>
         </header>
 
         <nav>
             <ul>
-                <li>Products</li>
-                <li>Blog</li>
-                <li>Contact</li>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <section class='content'>
-            <h3>We Are Entertainment</h3>
-            <img src='img/product3.png' alt='Luigi, Yoshi and Mario figurines'>
+            <h3>we are entertainment</h3>
+            <figure></figure>
             <h3>Mobile Games</h3>
-            <img src='img/product8.png' alt='Someone playing puzzle game on mobile phone'>
+            <figure></figure>
             <h3>Board Games</h3>
-            <img src='img/product6.png' alt='Boardgame figures'>
+            <figure></figure>
             <h3>Console Games</h3>
-            <img src='img/product9.png' alt='Playstation 4 controller'>
+            <figure></figure>>
         </section>
 
         <footer>
