--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Contact || Company Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 <body>
     <section class='main'>
@@ -16,9 +16,9 @@
 		
         <nav>
             <ul>
-                <li>Products</li>
-                <li>Blog</li>
-                <li>Contact</li>
+				<li><a href="product.html">Products</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="contact.html">Contact</a></li>
             </ul>
 		</nav>
 		
