Making more compatible for IE11 and working on header and nav.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
     <title>Home || Company Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section class='main'>
 
         <header>
-            <h1><a href="index.html">COMPANY NAME</a></h1>
+            <a href="index.html"><h1>COMPANY NAME</h1></a>
         </header>
 
         <nav>
-            <ul>
-                <li><a href="product.html">Products</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <section class='hamburger'>
+                <input type="checkbox" />
+
+                <span></span>
+                <span></span>
+                <span></span>
+
+                <ul class='menu'>
+                    <a href="product.html"><li>Products</li></a>
+                    <a href="#"><li>Blog</li></a>
+                    <a href="contact.html"><li>Contact</li></a>
+                </ul>
+            </section>
         </nav>
 
         <section class='content'>
@@ -30,7 +37,7 @@
             <h3>Board Games</h3>
             <figure></figure>
             <h3>Console Games</h3>
-            <figure></figure>>
+            <figure></figure>
         </section>
 
         <footer>
