--- a/product.html
+++ b/product.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
     <title>Products || Company Name</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section class='main'>
 
         <header>
-            <h1>COMPANY NAME</h1>
+            <a href="index.html"><h1>COMPANY NAME</h1></a>
         </header>
 
         <nav>
