Finished header and nav for mobile devices

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,19 @@
 		</header>
 		
         <nav>
-            <ul>
-				<li><a href="product.html">Products</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
-            </ul>
+			<section class='hamburger'>
+				<input type="checkbox" />
+
+				<span></span>
+				<span></span>
+				<span></span>
+
+				<ul class='menu'>
+					<a href="product.html"><li>Products</li></a>
+					<a href="#"><li>Blog</li></a>
+					<a href="contact.html"><li>Contact</li></a>
+				</ul>
+			</section>
 		</nav>
 		
         <section class='content'>
