Working on content section

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
         <section class='content'>
             <h3>we are entertainment</h3>
-            <figure></figure>
-            <h3>Mobile Games</h3>
-            <figure></figure>
-            <h3>Board Games</h3>
-            <figure></figure>
-            <h3>Console Games</h3>
-            <figure></figure>
+            <figure class='index-img1'></figure>
+            <h3>mobile games</h3>
+            <figure class='index-img2'></figure>
+            <h3>board games</h3>
+            <figure class='index-img3'></figure>
+            <h3>console games</h3>
+            <figure class='index-img4'></figure>
         </section>
 
         <footer>
