--- a/product.html
+++ b/product.html
@@ -30,21 +30,21 @@
         </nav>
 
         <section class='content'>
-            <h3>Product Catalog</h3>
-            <h3>Products</h3>
+            <h3 class='products-header1'>Products</h3>
+            <h3 class='products-header2'>Product Catalog</h3>
             <section class='catalog'>
-                <a href='img/product1.png'></a>
-                <a href='img/product2.png'></a>
-                <a href='img/product3.png'></a>
-                <a href='img/product4.png'></a>
-                <a href='img/product5.png'></a>
-                <a href='img/product6.png'></a>
-                <a href='img/product7.png'></a>
-                <a href='img/product8.png'></a>
-                <a href='img/product9.png'></a>
-                <a href='img/product10.png'></a>
-                <a href='img/product11.png'></a>
-                <a href='img/product12.png'></a>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
+                <figure></figure>
             </section>
         </section>
 
