--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <span></span>
                 <span></span>
 
-                <ul class='menu'>
-                    <a href="product.html"><li>Products</li></a>
-                    <a href="#"><li>Blog</li></a>
-                    <a href="contact.html"><li>Contact</li></a>
-                </ul>
+				<ul class='menu'>
+					<li><a href="product.html">Products</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
             </section>
         </nav>
 
