--- a/product.html
+++ b/product.html
@@ -21,30 +21,31 @@
                 <span></span>
                 <span></span>
 
-                <ul class='menu'>
-                    <a href="product.html"><li>Products</li></a>
-                    <a href="#"><li>Blog</li></a>
-                    <a href="contact.html"><li>Contact</li></a>
-                </ul>
+				<ul class='menu'>
+					<li><a href="product.html">Products</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
             </section>
         </nav>
 
         <section class='content'>
-            <h3 class='products-header1'>Products</h3>
+            <h3 class='single-line products-header1'>Products</h3>
             <h3 class='products-header2'>Product Catalog</h3>
             <section class='catalog'>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
+                <a href="img/product1.jpg"><figure></figure></a>
+                <a href="img/product2.jpg"><figure></figure></a>
+                <a href="img/product3.jpg"><figure></figure></a>
+                <a href="img/product4.jpg"><figure></figure></a>
+                <a href="img/product5.jpg"><figure></figure></a>
+                <a href="img/product6.jpg"><figure></figure></a>
+                <a href="img/product7.jpg"><figure></figure></a>
+                <a href="img/product8.jpg"><figure></figure></a>
+                <a href="img/product9.jpg"><figure></figure></a>
+                <a href="img/product10.jpg"><figure></figure></a>
+                <a href="img/product11.jpg"><figure></figure></a>
+                <a href="img/product12.jpg"><figure></figure></a>
+                
             </section>
         </section>
 
