Fixed warnings in w3

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 		</header>
 		
         <nav>
-			<section class='hamburger'>
+			<aside class='hamburger'>
 				<input type="checkbox" />
 
 				<span></span>
@@ -26,7 +26,7 @@
 					<li><a href="#">Blog</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
-			</section>
+			</aside>
 		</nav>
 		
         <section class='content'>
