put hamburger class on nav, and deleted the aside wrapping the menu

--- a/contact.html
+++ b/contact.html
@@ -13,20 +13,18 @@
             <a href="index.html"><h1>COMPANY NAME</h1></a>
 		</header>
 		
-        <nav>
-			<aside class='hamburger'>
-				<input type="checkbox" />
+        <nav class='hamburger'>
+			<input type="checkbox" />
 
-				<span></span>
-				<span></span>
-				<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
 
-				<ul class='menu'>
-					<li><a href="product.html">Products</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</aside>
+			<ul class='menu'>
+				<li><a href="product.html">Products</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
 		</nav>
 		
         <section class='content'>
