Finished tablet version

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <section class='main'>
 
         <header>
-            <a href="index.html"><h1>COMPANY NAME</h1></a>
+            <a href="index.html"><h1>Company name</h1></a>
         </header>
 
-        <nav class='hamburger'>
-            <input type="checkbox" />
+        <nav>
+            <input type="checkbox" class="hamburger" />
 
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
 
             <ul class='menu'>
                 <li><a href="product.html">Products</a></li>
@@ -27,14 +27,14 @@
             </ul>
         </nav>
 
-        <section class='content'>
-            <h3>we are entertainment</h3>
+        <section class='content index-content'>
+            <article><h3>we are entertainment</h3></article>
             <figure class='index-img1'></figure>
-            <h3>mobile games</h3>
+            <article><h3>mobile games</h3></article>
             <figure class='index-img2'></figure>
-            <h3>board games</h3>
+            <article><h3>board games</h3></article>
             <figure class='index-img3'></figure>
-            <h3>console games</h3>
+            <article><h3>console games</h3></article>
             <figure class='index-img4'></figure>
         </section>
 
