--- a/product.html
+++ b/product.html
@@ -10,15 +10,15 @@
     <section class='main'>
 
         <header>
-            <a href="index.html"><h1>COMPANY NAME</h1></a>
+            <a href="index.html"><h1>Company name</h1></a>
         </header>
 
-        <nav class='hamburger'>
-            <input type="checkbox" />
+        <nav>
+            <input type="checkbox" class="hamburger" />
 
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
 
             <ul class='menu'>
                 <li><a href="product.html">Products</a></li>
@@ -28,8 +28,8 @@
         </nav>
 
         <section class='content'>
-            <h3 class='single-line products-header1'>Products</h3>
-            <h3 class='products-header2'>Product Catalog</h3>
+            <article class='products-header1'><h3>Products</h3></article>
+            <article><h3 class='products-header2'>Product Catalog</h3></article>
             <section class='catalog'>
                 <a href="img/product1.jpg"><figure></figure></a>
                 <a href="img/product2.jpg"><figure></figure></a>
