--- a/contact.html
+++ b/contact.html
@@ -10,25 +10,25 @@
     <section class='main'>
 
         <header>
-            <a href="index.html"><h1>COMPANY NAME</h1></a>
+            <a href="index.html"><h1>Company name</h1></a>
 		</header>
 		
-        <nav class='hamburger'>
-			<input type="checkbox" />
+        <nav>
+            <input type="checkbox" class="hamburger" />
 
-			<span></span>
-			<span></span>
-			<span></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
 
-			<ul class='menu'>
-				<li><a href="product.html">Products</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
+            <ul class='menu'>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
 		
         <section class='content'>
-			<h3 class='single-line'>Contact</h3>
+			<article id='contact-header'><h3>Contact</h3></article>
 			<h4>More information</h4>
 			<form action="nowhere.php" method="post"> 
 				<fieldset class="select-topic">
