Finished Web version

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <ul class='menu'>
                 <li><a href="product.html">Products</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="http://www.blogger.com">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
