--- a/product.html
+++ b/product.html
@@ -21,13 +21,13 @@
             <span class="hamburger"></span>
 
             <ul class='menu'>
-                <li><a href="product.html">Products</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="http://www.blogger.com">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
-        <section class='content'>
+        <section class='content products-content'>
             <article class='products-header1'><h3>Products</h3></article>
             <article><h3 class='products-header2'>Product Catalog</h3></article>
             <section class='catalog'>
