--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
             <span class="hamburger"></span>
 
             <ul class='menu'>
-                <li><a href="product.html">Products</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+				<li><a href="index.html">Home</a></li>
+                <li><a href="product.html">Product</a></li>
+                <li><a href="http://www.blogger.com">Blog</a></li>
             </ul>
         </nav>
 		
