--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
         </nav>
 
         <section class='content index-content'>
-            <article><h3>we are entertainment</h3></article>
+            <article><h2>we are <strong>entertainment</strong></h2></article>
             <figure class='index-img1'></figure>
-            <article><h3>mobile games</h3></article>
+            <article><h2>mobile games</h2></article>
             <figure class='index-img2'></figure>
-            <article><h3>board games</h3></article>
+            <article><h2>board games</h2></article>
             <figure class='index-img3'></figure>
-            <article><h3>console games</h3></article>
+            <article><h2>console games</h2></article>
             <figure class='index-img4'></figure>
         </section>
 
+        <video autoplay loop id="star-background" muted>
+            <source src="movie/background.mp4" type="video/mp4">
+        </video>
+        
         <footer>
             <p>&copy; 2018 - Japheth Fenton - Inholland</p>
         </footer>
