Finished project, added sitemap, updated robots

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="utf-8">
     <title>Home || Company Name</title>
+    <meta name="description" content="Homepage of an Entertainment based business">
+    <meta name="keywords" content="Home, Entertainment, Console, Games, Board, mobile, business, company, All-round, Landing">
+    <meta name="author" content="Japheth Fenton">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
     <section class='main'>
 
@@ -27,7 +42,7 @@
             </ul>
         </nav>
 
-        <section class='content index-content'>
+        <aside class='content index-content'>
             <article><h2>we are <strong>entertainment</strong></h2></article>
             <figure class='index-img1'></figure>
             <article><h2>mobile games</h2></article>
@@ -36,8 +51,9 @@
             <figure class='index-img3'></figure>
             <article><h2>console games</h2></article>
             <figure class='index-img4'></figure>
-        </section>
+        </aside>
 
+        <!-- Video playing in the background-->
         <video autoplay loop id="star-background" muted>
             <source src="movie/background.mp4" type="video/mp4">
         </video>
