--- a/product.html
+++ b/product.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="utf-8">
     <title>Products || Company Name</title>
+    <meta name="description" content="Entertainment based business, selling products">
+    <meta name="keywords" content="Products, Buy, Great, Nice, Fun, Games, Entertainment, Store, Business, Stuff">
+    <meta name="author" content="Japheth Fenton">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
     <section class='main'>
 
@@ -31,21 +46,26 @@
             <article class='products-header1'><h2>Products</h2></article>
             <article><h2 class='products-header2'>Product Catalog</h2></article>
             <section class='catalog'>
-                <a href="img/product1.jpg"><figure></figure></a>
-                <a href="img/product2.jpg"><figure></figure></a>
-                <a href="img/product3.jpg"><figure></figure></a>
-                <a href="img/product4.jpg"><figure></figure></a>
-                <a href="img/product5.jpg"><figure></figure></a>
-                <a href="img/product6.jpg"><figure></figure></a>
-                <a href="img/product7.jpg"><figure></figure></a>
-                <a href="img/product8.jpg"><figure></figure></a>
-                <a href="img/product9.jpg"><figure></figure></a>
-                <a href="img/product10.jpg"><figure></figure></a>
-                <a href="img/product11.jpg"><figure></figure></a>
-                <a href="img/product12.jpg"><figure></figure></a>
+                <a href="img/product1.png"><figure></figure></a>
+                <a href="img/product2.png"><figure></figure></a>
+                <a href="img/product3.png"><figure></figure></a>
+                <a href="img/product4.png"><figure></figure></a>
+                <a href="img/product5.png"><figure></figure></a>
+                <a href="img/product6.png"><figure></figure></a>
+                <a href="img/product7.png"><figure></figure></a>
+                <a href="img/product8.png"><figure></figure></a>
+                <a href="img/product9.png"><figure></figure></a>
+                <a href="img/product10.png"><figure></figure></a>
+                <a href="img/product11.png"><figure></figure></a>
+                <a href="img/product12.png"><figure></figure></a>
                 
             </section>
         </section>
+
+        <!-- Video playing in the background-->
+        <video autoplay loop id="star-background" muted>
+            <source src="movie/background.mp4" type="video/mp4">
+        </video>
 
         <footer>
             <p>&copy; 2018 - Japheth Fenton - Inholland</p>
