--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<title>Contact || Company Name</title>
+	<meta name="description" content="Contact an Entertainment based business">
+    <meta name="keywords" content="Entertainment, Business, Company, Contact, Message, Phone, information, help, insight, talk">
+    <meta name="author" content="Japheth Fenton">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Favicons-->
+	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+	<link rel="manifest" href="favicons/site.webmanifest">
+	<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="favicons/favicon.ico">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="favicons/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
     <section class='main'>
 
@@ -70,6 +85,11 @@
 				/>
 			</form>
 		</section>
+
+		<!-- Video playing in the background-->
+		<video autoplay loop id="star-background" muted>
+            <source src="movie/background.mp4" type="video/mp4">
+        </video>
 		
         <footer>
             <p>&copy; 2018 - Japheth Fenton - Inholland</p>
